test_src/compiler_errors/types/arithmetic/ModFloatError4.b
class ModFloatError3 {
    void test() {
        Int value = 2;
        println(value %= 3.0);
    }
}
